--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,5 @@
 <app-header></app-header>
-<p>home works!</p>
+<div class="container">
+  <app-login></app-login>
+</div>
 <app-sidebar></app-sidebar>
