--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,14 @@
-<p>login works!</p>
+<div class="login-card">
+  <h2>Login</h2>
+  <form name="loginForm">
+    <label for="userEmail">Email:</label>
+    <input type="email" id="userEmail" name="userEmail" [(ngModel)]="userEmail" required>
+
+    <label for="userPassword">Senha:</label>
+    <input type="password" id="userPassword" name="userPassword" [(ngModel)]="userPassword" required>
+
+    <button type="submit">Entrar</button>
+    <button type="submit">Esqueci a senha</button>
+    <button type="submit">Cadastrar-me</button>
+  </form>
+</div>
