--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,3 @@
 <app-header></app-header>
-<div class="container">
-  <app-login></app-login>
-</div>
+<p>Home works!</p>
 <app-sidebar></app-sidebar>
