--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,13 +2,13 @@
   <h2>Login</h2>
   <form name="loginForm">
     <label for="userEmail">Email:</label>
-    <input type="email" id="userEmail" name="userEmail" [(ngModel)]="userEmail" required>
+    <input type="email" id="userEmail" name="userEmail" [(ngModel)]="loginModel.email" required>
 
     <label for="userPassword">Senha:</label>
-    <input type="password" id="userPassword" name="userPassword" [(ngModel)]="userPassword" required>
+    <input type="password" id="userPassword" name="userPassword" [(ngModel)]="loginModel.password" required>
 
-    <button type="submit">Entrar</button>
-    <button type="submit">Esqueci a senha</button>
-    <button type="submit">Cadastrar-me</button>
+    <button (click)="onLogin()">Entrar</button>
+    <button (click)="onRemember()">Esqueci a senha</button>
+    <button routerLink="/cadastro">Cadastrar-me</button>
   </form>
 </div>
