Finaliza Ex4 e Ex5

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,5 @@
-<app-header></app-header>
-<p>Home works!</p>
-<app-sidebar></app-sidebar>
+<!-- <app-header></app-header> -->
+<div id="home">
+  <p>Home works!</p>
+</div>
+<!-- <app-sidebar></app-sidebar> -->
