--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
-<router-outlet></router-outlet>
+<div class="container-header">
+  <app-header></app-header>
+</div>
+<div class="container-main">
+  <router-outlet></router-outlet>
+</div>
+<div class="container-sidebar">
+  <app-sidebar></app-sidebar>
+</div>
