--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
-<div class="container-header">
+<div class="container-header" *ngIf="currentPath != '/login' && currentPath != '/cadastro' && currentPath != ''">
   <app-header></app-header>
 </div>
 <div class="container-main">
   <router-outlet></router-outlet>
 </div>
-<div class="container-sidebar">
+<div class="container-sidebar" *ngIf="currentPath != '/login' && currentPath != '/cadastro' && currentPath != ''">
   <app-sidebar></app-sidebar>
 </div>
