--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -1,3 +1,7 @@
-<div id="sidebar">
-  <p>Sidebar works!</p>
-</div>
+<ul class="menu">
+  <li class="item">
+    <a href="#">Início</a>
+    <a href="#">Dietas</a>
+    <a href="#">Perfil</a>
+  </li>
+</ul>
