--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,14 +1,16 @@
-<div class="login-card">
-  <h2>Login</h2>
-  <form name="loginForm">
-    <label for="userEmail">Email:</label>
-    <input type="email" id="userEmail" name="userEmail" [(ngModel)]="loginModel.email" required>
-
-    <label for="userPassword">Senha:</label>
-    <input type="password" id="userPassword" name="userPassword" [(ngModel)]="loginModel.password" required>
-
-    <button (click)="onLogin()">Entrar</button>
-    <button (click)="onRemember()">Esqueci a senha</button>
-    <button routerLink="/cadastro">Cadastrar-me</button>
-  </form>
+<div class="wrapper">
+  <div class="login-card">
+    <h2>Login</h2>
+    <form name="loginForm">
+      <label for="userEmail">Email:</label>
+      <input type="email" id="userEmail" name="userEmail" [(ngModel)]="loginModel.email" required>
+  
+      <label for="userPassword">Senha:</label>
+      <input type="password" id="userPassword" name="userPassword" [(ngModel)]="loginModel.password" required>
+  
+      <button (click)="onLogin()">Entrar</button>
+      <button (click)="onRemember()">Esqueci a senha</button>
+      <button routerLink="/cadastro">Cadastrar-me</button>
+    </form>
+  </div>
 </div>
