--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,7 @@
 :host {
   font-family: "Arial", sans-serif;
   background-color: #f2f2f2;
-  
+
   margin: 0;
   padding: 0;
 
@@ -20,20 +20,13 @@
 }
 
 .container-sidebar {
-  /* border: 2px solid red; */
+  border: 2px solid red;
   min-height: 100svh;
 }
 
 .container-main {
-  width: 100%;
-  max-width: 400px;
-
+  /* Usar o Grid? */
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
-  margin: 0 auto;
 }
-
-/* TESTES */
-
