--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -1,22 +1,24 @@
-<div class="cadastro-card">
-  <h2>Cadastro</h2>
-  <form name="cadastroForm">
-    <label for="userName">Nome:</label>
-    <input type="text" id="userName" name="userName" [(ngModel)]="cadastroModel.nome" required>
-
-    <label for="userEmail">Email:</label>
-    <input type="email" id="userEmail" name="userEmail" [(ngModel)]="cadastroModel.email" required>
-
-    <label for="userNascimento">Data de nascimento:</label>
-    <input type="date" id="userNascimento" name="userNascimento" [(ngModel)]="cadastroModel.dataNascimento" required>
-
-    <label for="userPassword">Senha:</label>
-    <input type="password" id="userPassword" name="userPassword" [(ngModel)]="cadastroModel.password" required>
-
-    <label for="userPasswordConfirm">Confirmar senha:</label>
-    <input type="password" id="userPasswordConfirm" name="userPasswordConfirm" [(ngModel)]="confirmPassword" required>
-
-    <button type="submit" (click)="onSignUp()">Cadastrar</button>
-    <button routerLink="/login">Voltar</button>
-  </form>
+<div class="wrapper">
+  <div class="cadastro-card">
+    <h2>Cadastro</h2>
+    <form name="cadastroForm">
+      <label for="userName">Nome:</label>
+      <input type="text" id="userName" name="userName" [(ngModel)]="cadastroModel.nome" required>
+  
+      <label for="userEmail">Email:</label>
+      <input type="email" id="userEmail" name="userEmail" [(ngModel)]="cadastroModel.email" required>
+  
+      <label for="userNascimento">Data de nascimento:</label>
+      <input type="date" id="userNascimento" name="userNascimento" [(ngModel)]="cadastroModel.dataNascimento" required>
+  
+      <label for="userPassword">Senha:</label>
+      <input type="password" id="userPassword" name="userPassword" [(ngModel)]="cadastroModel.password" required>
+  
+      <label for="userPasswordConfirm">Confirmar senha:</label>
+      <input type="password" id="userPasswordConfirm" name="userPasswordConfirm" [(ngModel)]="confirmPassword" required>
+  
+      <button type="submit" (click)="onSignUp()">Cadastrar</button>
+      <button routerLink="/login">Voltar</button>
+    </form>
+  </div>
 </div>
