--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,3 +1,14 @@
+.wrapper {
+  width: 100%;
+  max-width: 400px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0 auto;
+}
+
 .login-card {
   background-color: #fff;
   border-radius: 8px;
