--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <ul class="menu">
   <li class="item">
-    <a href="#">Início</a>
-    <a href="#">Dietas</a>
-    <a href="#">Perfil</a>
+    <a routerLink="/home" routerLinkActive="active">Início</a>
+    <a routerLink="/diet" routerLinkActive="active">Dietas</a>
+    <a routerLink="/profile" routerLinkActive="active">Perfil</a>
   </li>
 </ul>
