--- a/src/app/cadastro/cadastro.component.css
+++ b/src/app/cadastro/cadastro.component.css
@@ -32,6 +32,7 @@
   text-align: left;
   margin-bottom: 8px;
   color: #555;
+  font-size: .8rem;
 }
 
 .cadastro-card input {
@@ -56,4 +57,14 @@
 
 .cadastro-card button:hover {
   background-color: #504caf;
+}
+
+.cadastro-card .bloco {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-column-gap: 1rem;
+}
+
+.bloco input {
+  order: 1;
 }
