--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,3 @@
-<!-- <app-header></app-header> -->
-<div id="home">
-  <p>Home works!</p>
+<div class="wrapper">
+  <h1>Bem-vindo, {{ loggedUser.nome ? loggedUser.nome.split(' ')[0] : 'Visitante' }}!</h1> 
 </div>
-<!-- <app-sidebar></app-sidebar> -->
