--- a/src/app/diet/diet.component.html
+++ b/src/app/diet/diet.component.html
@@ -1,15 +1,15 @@
 <div class="diet-search">
-  <input type="text">
-  <button>Pesquisar</button>
+  <input type="text" placeholder="Pesquise uma dieta pelo nome" #filter>
+  <button type="button" (click)="filterResults(filter.value)">Pesquisar</button>
 </div>
 <div class="wrapper">
-  <div class="diet-card" *ngFor="let diet of diets">
-    <img src="{{ diet.imageLink }}" alt="{{ diet.name }}">
-    <h2>{{ diet.name }}</h2>
+  <div class="diet-card" *ngFor="let diet of filteredDiets">
     <div class="diet-data">
+      <img src="{{ diet.imageLink }}" alt="{{ diet.name }}">
+      <h2>{{ diet.name }}</h2>    
       <p><strong>Descrição:</strong>  {{ diet.description }}</p>
     </div>
-    <button routerLink="/cadastro">Detalhes</button>
+    <button (click)="goToDetail(diet.id)">Detalhes</button>
   </div>
-</div>  
+</div>
 
