--- a/src/app/shared/sidebar/sidebar.component.css
+++ b/src/app/shared/sidebar/sidebar.component.css
@@ -1,7 +1,7 @@
 .menu {
   width: 300px;
-  height: 100svh;
-  /* height: 100%; */
+  min-height: 100svh;
+  height: 100%;
   background-color: #162447;
   /* border-radius: 8px; */
   overflow: hidden;
