--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -13,7 +13,8 @@
       <label for="userCEP"><strong>CEP:</strong></label>
       <input type="text" id="userCEP" name="userCEP">
   
-      <button>Consultar</button>
+      <button type="button" (click)="searchCEP()">Consultar</button>
     </div>
-    </div>
+    <p>{{ address }}</p>
+  </div>
 </div> 
