--- a/src/app/diet/diet.component.scss
+++ b/src/app/diet/diet.component.scss
@@ -22,7 +22,7 @@
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: flex-end;
-  /* max-width: 400px */
+  // max-width: 400px;
 }
 
 .diet-card img {
