--- a/src/app/shared/sidebar/sidebar.component.scss
+++ b/src/app/shared/sidebar/sidebar.component.scss
@@ -3,7 +3,6 @@
   min-height: 100svh;
   height: 100%;
   background-color: #162447;
-  /* border-radius: 8px; */
   overflow: hidden;
 
   padding: 0;
@@ -11,14 +10,12 @@
 }
 
 .menu .item {
-  /* background-color: #1b1b2f; */
   overflow: hidden;
-  /* max-height: 0; */
   transition: max-height .8s ease-out;
 }
 
 .menu .item a {
-  display:block;
+  display: block;
   padding: 1rem;
   position: relative;
 
@@ -28,7 +25,7 @@
 
 .menu .item a::before{
   content:'';
-  display:block;
+  display: block;
   position: absolute;
   top: 0;
   left: 0;
@@ -41,9 +38,23 @@
 
 .menu .item a:hover {
   padding-left: calc(1rem + 5px);
-  /* padding-left: 0; */
 }
 
 .menu .item a:hover::before {
   opacity: 1;
+}
+
+// Media queries
+@media (max-width: 1024px) {   
+  .menu .item {
+    min-width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  .menu {
+    width: 100vw;
+    min-height: auto;
+  }
 }
