--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,11 @@
+body {
+  margin: 0;
+  padding: 0;
+}
 
+// Media queries
+@media (max-width: 1024px) {   
+  body {
+    margin-right: 20px;
+  }
+}
