--- a/src/app/profile/profile.component.scss
+++ b/src/app/profile/profile.component.scss
@@ -4,7 +4,6 @@
 
   display: flex;
   justify-content: center ;
-  /* diff */
   align-items: start;  
   padding-top: 75px;
   
@@ -40,13 +39,12 @@
 
 .profile-card label {
   text-align: left;
-  /* margin-bottom: 8px; */
   color: #555;
   font-size: .8rem;
   grid-column: 1 / 3;
 }
 
-.profile-card input {
+.profile-card input { 
   padding: 10px;
   margin-bottom: 16px;
   border: 1px solid #ccc;
@@ -70,6 +68,14 @@
   background-color: #504caf;
 }
 
+.profile-card button:disabled,
+.profile-card button[disabled]{
+  border: 1px solid #999999;
+  background-color: #cccccc;
+  color: #666666;
+  cursor: not-allowed;
+}
+
 .profile-card .bloco {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -78,4 +84,8 @@
 
 .bloco button {
   order: 1;
+}
+
+.error {
+  color: #e43f5a;
 }
