melhora espaçamento do modal e adiciona imagens

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,7 +9,7 @@
       
         <form name="atividadeForm" class="flex-row">
           
-          <div class="card flex justify-content-center">
+          <div class="card flex justify-content-center  py-5">
             <p-dropdown 
             [options]="activities"
             [(ngModel)]="atividadeModel.act" 
@@ -25,7 +25,7 @@
             </span>
           </div>
 
-          <div class="card flex justify-content-center">
+          <div class="card flex justify-content-center py-5">
             <p-button type="submit" (click)="onRegister()" size="small">Registrar</p-button>
           </div>
                  
